# smpsave

./: .gitignore  LICENSE  README.md  backup.sh  config.ini  main.py  pyproject.toml  requirements.txt  upload.sh
.github/workflows/: docs.yml  python-publish.yml
bootstrap/: factory.py  filesync.py
bootstrapper/: filesync.py  sever_lifecycle.py
cli/: __init__.py  __main__.py  cli.py
core/: config.py  factory.py  filesync.py  sever_lifecycle.py
discordbot/: bot.py  config.py  factory.py
docs/: cli.rst  conf.py  configuration.rst  index.rst  provisioners.rst  quickstart.rst
docs/_build/html/: .buildinfo  configuration.html  objects.inv  provisioners.html  search.html  searchindex.js
docs/_build/html/_sources/: quickstart.rst.txt
example/feedthebeast/: bootstrap.sh  config.ini  start.sh  stop.sh
examples/feedthebeast/: config.ini
examples/feedthebeast/gameserver/: bootstrap.sh
itgtest/: config.ini
itgtest/server/: bootstrap.sh  server.py  start.sh  stop.sh
provisioning/: __init__.py  linode.py  provisioner.py
servermanager/: __init__.py  config.py  provisioner.py
smpsave/: __init__.py  __main__.py
smpsave/cli/: __init__.py  cli.py  log_config.py
smpsave/configuration/: __init__.py  baseconfig.py  config_loader.py
smpsave/core/: config.py  factory.py  filesync.py  sever_lifecycle.py
smpsave/discordbot/: bot.py  config.py  factory.py
smpsave/provisioning/: linode.py
