[project]
name = "smpsave"
authors = [
    {name = "tbeeck", email = "becktimd@gmail.com"},
]
description = "Tool for provisioning private game servers on demand"
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
	"License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
	"Development Status :: 2 - Pre-Alpha",
 	"Intended Audience :: Developers",
	"Intended Audience :: System Administrators",
	"Topic :: Games/Entertainment",
	"Topic :: Utilities",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",   
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
]

requires-python = ">=3.9"
dependencies = [
    "discord.py>=2.3.2",
	"linode_api4>=5.12.1",
	"click>=8.1.7",
    'importlib-metadata; python_version<"3.10"',
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/tbeeck/smpsave/"
documentation = "https://tbeeck.github.io/smpsave/"

[project.scripts]
smpsave-cli = "smpsave.cli:run_cli"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "smpsave.__version__"}

[tool.setuptools.packages.find]
include = ["smpsave*"]
exclude = ["smpsave.test.*"]
